--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,40 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tvName"
+        style="@style/myStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/myName"
+        android:textAlignment="center" />
+
+    <EditText
+        android:id="@+id/nickname_edit"
+        style="@style/myStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="What is your Nickname?"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/done_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Done" />
+
+    <TextView
+        android:id="@+id/tvResult"
+        style="@style/myStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_green_dark"
         android:textAlignment="center"
-        style="@style/myStyle" />
+        android:visibility="gone" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imgStar"
         style="@style/myStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,6 +49,7 @@
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <ScrollView
+        android:id="@+id/tvBio"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
